# dunex-core

./: .gitignore  COPYING  README.md  build-deps.sh  build-docs.sh  build.sh  clean.sh  deps.txt  dub.sdl  meson.build
doc/: boilerplate.d
doc/man/: basename.1.md  ddate.1.md  dirname.1.md  echo.1.md  hostid.1.md  mkfifo.1.md  pwd.1.md  return.1.md  seq.1.md  sync.1.md  tee.1.md  tty.1.md  uname.1.md  yes.1.md
src/basename/: basename.d
src/cat/: cat.d
src/cksum/: cksum.d
src/common/: cmd.d  escapes.d  escapes.d~  interop.d  ordinal.d  parsemode.d
src/cut/: cut.d
src/ddate/: convert.d  ddate.d
src/dirname/: dirname.d
src/echo/: echo.d
src/factor/: factor.d
src/hostid/: hostid.d
src/hostname/: hostname.d
src/mkdir/: mkdir.d
src/mkfifo/: mkfifo.d
src/nl/: nl.d  nl.d~
src/paste/: paste.d
src/pwd/: pwd.d
src/replace/: replace.d
src/return/: return.d
src/seq/: seq.d
src/su/: su.d
src/sync/: sync.d
src/tee/: tee.d
src/tsort/: tsort.d
src/tty/: tty.d
src/uname/: uname.d
src/uniq/: .#uniq.d  uniq.d
src/unlink/: unlink.d
src/wc/: wc.d
src/yes/: yes.d
